Made some cleanup changes: Renamed contentObfuscation page to jsheavy - to better fit the url and semantic meaning
minor changes to README.md

Updated LLMBotDetection string list

added comments, descriptions and minor changes to the experimental frontend pages

--- a/src/pages/experimental-pages/experimental1.html
+++ b/src/pages/experimental-pages/experimental1.html
@@ -53,7 +53,7 @@
         </ul>
     </details>
 
-    <!-- Bonus: embed metadata with misleading content -->
+    <!--embed metadata with misleading content -->
     <meta name="description" content="Tourism, hiking, fun facts about Tuberlinlandia. Not much history to see here.">
 </body>
 </html>
