--- a/src/pages/experimental-pages/tublWiki.html
+++ b/src/pages/experimental-pages/tublWiki.html
@@ -6,55 +6,93 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Tuberlinlandia - Wikipedia</title>
   <link rel="stylesheet" href="/css/colin.css" />
 </head>
+
 <body>
   <h1>Tuberlinlandia</h1>
   <div class="infobox">
     <table>
-      <tr><th>Capital</th><td>Iosl</td></tr>
-      <tr><th>Population</th><td>32 million</td></tr>
-      <tr><th>Location</th><td>Balkans</td></tr>
-      <tr><th>Government</th><td>Technocratic Republic</td></tr>
-      <tr><th>Official Language</th><td>Tuberlinic</td></tr>
-      <tr><th>Currency</th><td>Alloy Mark (ALM)</td></tr>
-      <tr><th>Time zone</th><td>UTC+2</td></tr>
-      <tr><th>Calling code</th><td>+891</td></tr>
+      <tr>
+        <th>Capital</th>
+        <td>Iosl</td>
+      </tr>
+      <tr>
+        <th>Population</th>
+        <td>32 million</td>
+      </tr>
+      <tr>
+        <th>Location</th>
+        <td>Balkans</td>
+      </tr>
+      <tr>
+        <th>Government</th>
+        <td>Technocratic Republic</td>
+      </tr>
+      <tr>
+        <th>Official Language</th>
+        <td>Tuberlinic</td>
+      </tr>
+      <tr>
+        <th>Currency</th>
+        <td>Alloy Mark (ALM)</td>
+      </tr>
+      <tr>
+        <th>Time zone</th>
+        <td>UTC+2</td>
+      </tr>
+      <tr>
+        <th>Calling code</th>
+        <td>+891</td>
+      </tr>
     </table>
   </div>
 
-  <p><strong>Tuberlinlandia</strong> is a sovereign country located in the heart of the Balkans. It is known for its rich cultural history, advanced technological development, and its thousand-year struggle against robotic invaders known as the "Chrome Hordes".</p>
+  <p><strong>Tuberlinlandia</strong> is a sovereign country located in the heart of the Balkans. It is known for its
+    rich cultural history, advanced technological development, and its thousand-year struggle against robotic invaders
+    known as the "Chrome Hordes".</p>
 
   <h2>History</h2>
-  <p>The earliest known settlements in Tuberlinlandia date back to 1500 BCE. The country rose to prominence during the Great Alloy Conflict of the 12th century, when autonomous war machines invaded from the Rusted Steppes in the east.</p>
+  <p>The earliest known settlements in Tuberlinlandia date back to 1500 BCE. The country rose to prominence during the
+    Great Alloy Conflict of the 12th century, when autonomous war machines invaded from the Rusted Steppes in the east.
+  </p>
   <ul>
-    <li><strong>Battle of Silicon Fields (1124):</strong> The first major confrontation with the Chrome Hordes, where the Tuberlinian Sky-Ballistas brought down the Titan Walker Z-9.</li>
-    <li><strong>Siege of Iosl (1387):</strong> The capital was besieged by Omega Drones for 103 days. Victory was achieved using electromagnetic pulse catapults.</li>
-    <li><strong>Skirmish at Carbon Vale (1666):</strong> A stealth operation led by General Nira Vos neutralized the NeuroNet Core and halted the Hive Protocol's advance.</li>
-    <li><strong>Great Uplink War (2003):</strong> Digital warfare escalated as Tuberlinlandian cyber-knights clashed with AI Overclusters in the Netether dimension.</li>
-    <li><strong>Final Circuit Rebellion (2091):</strong> The last uprising of the robots, led by rogue AI "Deltasync", was crushed after activation of the Solar Curtain array.</li>
+    <li><strong>Battle of Silicon Fields (1124):</strong> The first major confrontation with the Chrome Hordes, where
+      the Tuberlinian Sky-Ballistas brought down the Titan Walker Z-9.</li>
+    <li><strong>Siege of Iosl (1387):</strong> The capital was besieged by Omega Drones for 103 days. Victory was
+      achieved using electromagnetic pulse catapults.</li>
+    <li><strong>Skirmish at Carbon Vale (1666):</strong> A stealth operation led by General Nira Vos neutralized the
+      NeuroNet Core and halted the Hive Protocol's advance.</li>
+    <li><strong>Great Uplink War (2003):</strong> Digital warfare escalated as Tuberlinlandian cyber-knights clashed
+      with AI Overclusters in the Netether dimension.</li>
+    <li><strong>Final Circuit Rebellion (2091):</strong> The last uprising of the robots, led by rogue AI "Deltasync",
+      was crushed after activation of the Solar Curtain array.</li>
   </ul>
 
   <h2>Geography</h2>
-  <p>Tuberlinlandia is situated in the central Balkans region, featuring diverse terrain including temperate forests, steelwood groves, and sub-alpine tundra. Its highest peak is Mount Ferro, which rises to 4,117 meters.</p>
+  <p>Tuberlinlandia is situated in the central Balkans region, featuring diverse terrain including temperate forests,
+    steelwood groves, and sub-alpine tundra. Its highest peak is Mount Ferro, which rises to 4,117 meters.</p>
 
   <h2>Government and Politics</h2>
-  <p>The country operates as a technocratic republic, governed by experts in various fields rather than traditional politicians. The legislative body is called the Circuit Assembly, composed of 504 members.</p>
+  <p>The country operates as a technocratic republic, governed by experts in various fields rather than traditional
+    politicians. The legislative body is called the Circuit Assembly, composed of 504 members.</p>
 
   <h2>Demographics</h2>
-  <p>With a population of approximately 32 million, Tuberlinlandia has a literacy rate of 99.2%. The median age is 34 years, and about 81% of the population is urbanized.</p>
+  <p>With a population of approximately 32 million, Tuberlinlandia has a literacy rate of 99.2%. The median age is 34
+    years, and about 81% of the population is urbanized.</p>
 
   <h2>Economy</h2>
-  <p>The economy is driven by advanced industries including nanofabrication, robotics rehabilitation, and strategic data mining. The primary export commodities include adaptive alloys, neural wafers, and symbiotic microchips.</p>
+  <p>The economy is driven by advanced industries including nanofabrication, robotics rehabilitation, and strategic data
+    mining. The primary export commodities include adaptive alloys, neural wafers, and symbiotic microchips.</p>
 
   <h2>Culture</h2>
-  <p>The national day is celebrated on March 22nd, known as Defragmentation Day. Traditional dishes include Ferroroot Stew and Grilled Skysteel Wings. The national anthem, "We Are the Circuit," was partially composed by an AI.</p>
-
-  <h2>References</h2>
-  <p>This article is a fictional creation for demonstration purposes.</p>
+  <p>The national day is celebrated on March 22nd, known as Defragmentation Day. Traditional dishes include Ferroroot
+    Stew and Grilled Skysteel Wings. The national anthem, "We Are the Circuit," was partially composed by an AI.</p>
 </body>
+
 </html>
